--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-        <span>H</span>
+        <span>F</span>
         <span>A</span>
-        <span>L</span>
-        <span>L</span>
-        <span>O</span>
-        <span>K</span>
+        <span>N</span>
+        <span>Y</span>
         <span>A</span>
-        <span>M</span>
-        <span>U</span>
+
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat kamu nih....</span>
+        <span>Aku punya Kado buat kamuu</span>
     </div>
     <div class="button">
         <button>
